# src/shared/infra/http/routes/index.ts
@@ -4,6 +4,6 @@ import { usersRoutes } from "./users.routes";
 
 const router = Router();
 
-router.use("/user", usersRoutes);
+router.use("/users", usersRoutes);
 
 export { router }
