# src/shared/infra/http/routes/users.routes.ts
@@ -3,6 +3,8 @@ import { DeleteUserController } from "@modules/users/useCases/deleteUser/DeleteU
 import { ImportUserController } from "@modules/users/useCases/importUser/ImportUserController";
 import { UpdateUserController } from "@modules/users/useCases/updateUser/UpdateUserController";
 import { UpdateAvatarController } from "@modules/users/useCases/updateAvatar/UpdateAvatarController";
+import { ListUsersController } from "@modules/users/useCases/listUsers/ListUsersController";
+import { ListUserController } from "@modules/users/useCases/listUser/ListUserController";
 
 import { Router } from "express";
 import multer from "multer";
@@ -14,7 +16,7 @@ const upload = multer({
 });
 
 import uploadConfig from "@config/upload";
-import { ListUserController } from "@modules/users/useCases/ListUser/ListUserController";
+
 
 
 const createUserController = new CreateUserController();
@@ -22,6 +24,7 @@ const importUserController = new ImportUserController();
 const updateUserController = new UpdateUserController();
 const deleteUserController = new DeleteUserController();
 const updateAvatarController = new UpdateAvatarController();
+const listUsersController = new ListUsersController();
 const listUserController = new ListUserController();
 
 const  uploadAvatar = multer(uploadConfig.upload("./tmp/avatar"));
@@ -41,8 +44,11 @@ usersRoutes.delete("/delete/:id", deleteUserController.handle);
 // Update avatar the user
 usersRoutes.patch("/avatar/:id",uploadAvatar.single("avatar"), updateAvatarController.handle);
 
+// List Users
+usersRoutes.get("/users", listUsersController.handle);
+
 // List User
-usersRoutes.get("/user", listUserController.handle);
+usersRoutes.get("/:id", listUserController.handle);
 
 export { usersRoutes };
 
